<?xml version="1.0" encoding="utf-8"?>
<!-- 
  Amarino - A prototyping software toolkit for Android and Arduino
  Copyright (c) 2009 Bonifaz Kaufmann.  All right reserved.
  
  This library is free software; you can redistribute it and/or
  modify it under the terms of the GNU Lesser General Public
  License as published by the Free Software Foundation; either
  version 3 of the License, or (at your option) any later version.

  This library is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
  Lesser General Public License for more details.

  You should have received a copy of the GNU Lesser General Public
  License along with this library; if not, write to the Free Software
  Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
 -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" 
	android:background="#555">
	
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent" 
		android:orientation="horizontal"
	>
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_weight="1"
			android:orientation="vertical"
			android:layout_marginRight="1dp"
		>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/bt_management_title"
				android:paddingTop="15dp"
				android:gravity="center"
				android:background="#333"
				android:textSize="14sp">
			</TextView>
			
			<ImageButton
				android:id="@+id/bluetooth"
				android:layout_height="fill_parent"
				android:layout_width="fill_parent" 
				android:layout_weight="1"
				android:layout_marginBottom="1dp"
				android:layout_gravity="center"
				android:paddingTop="5dp"
				android:paddingRight="15dp"
				android:paddingLeft="15dp"
				android:paddingBottom="25dp"
				android:scaleType="fitCenter"
				android:background="#333"
				android:src="@drawable/bluetooth_128">
			</ImageButton>
			
			<ImageButton
				android:id="@+id/monitoring"
				android:layout_height="fill_parent"
				android:layout_width="fill_parent" 
				android:layout_weight="1"
				android:paddingLeft="15dp"
				android:paddingRight="15dp"
				android:paddingBottom="5dp"
				android:paddingTop="25dp"
				android:scaleType="fitCenter"
				android:background="#333"
				android:src="@drawable/binocular_128">
			</ImageButton>
			
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/monitoring_title"
				android:paddingBottom="15dp"
				android:gravity="center"
				android:background="#333"
				android:textSize="14sp">
			</TextView>
		
		</LinearLayout>
	
	
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_weight="1"
			android:orientation="vertical"
		>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/event_management_title"
				android:paddingTop="15dp"
				android:gravity="center"
				android:background="#333"
				android:textSize="14sp">
			</TextView>
			
			<ImageButton
				android:id="@+id/event"
				android:layout_height="fill_parent"
				android:layout_width="fill_parent" 
				android:layout_weight="1"
				android:layout_marginBottom="1dp"
				android:paddingTop="5dp"
				android:paddingRight="15dp"
				android:paddingLeft="15dp"
				android:paddingBottom="25dp"
				android:scaleType="fitCenter"
				android:background="#333"
				android:src="@drawable/btn_event_manager">
			</ImageButton>
			
			<ImageButton
				android:id="@+id/settings"
				android:layout_height="fill_parent"
				android:layout_width="fill_parent" 
				android:layout_weight="1"
				android:paddingLeft="15dp"
				android:paddingRight="15dp"
				android:paddingBottom="5dp"
				android:paddingTop="25dp"
				android:scaleType="fitCenter"
				android:background="#333"
				android:src="@drawable/settings_128">
			</ImageButton>
			
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/settings_title"
				android:paddingBottom="15dp"
				android:gravity="center"
				android:background="#333"
				android:textSize="14sp">
			</TextView>
		
		</LinearLayout>
	
	</LinearLayout>

	<ImageButton
		android:id="@+id/connect"
		android:layout_width="100dp"
		android:layout_height="100dp"
		android:layout_gravity="center"
		android:background="#0333"
		android:scaleType="fitCenter"
		android:src="@drawable/connect_button_off_128">
	</ImageButton>
	
	<TextView
		android:id="@+id/status"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:text="@string/disconnected"
		android:textColor="#000"
		android:gravity="center" 
		android:textSize="10sp">
	</TextView>

</FrameLayout>